--- a/css/styles.css
+++ b/css/styles.css
@@ -8,23 +8,20 @@ body {
   position: absolute;
   width: 1600px;
   height: 80px;
-  left: 0px;
-  top: 0px;
+  border-bottom: 1px solid #ececec;
 }
 .menu-nav {
   position: absolute;
-  position: absolute;
   width: 1600px;
   height: 80px;
-  left: 0px;
 }
 .menu-list {
+  display: flex;
   list-style-type: none;
-  overflow-x: hidden;
-  white-space: nowrap;
+  align-items: center;
+  justify-content: space-between;
 }
 .list {
-  display: inline;
 }
 .logo {
   cursor: pointer;
@@ -78,7 +75,6 @@ body {
   position: absolute;
   width: 1600px;
   height: 600px;
-  left: 0px;
   top: 80px;
   background-color: #2f303a;
 }
@@ -229,7 +225,7 @@ body {
 }
 .filters {
   position: absolute;
-  width: 650px;
+  width: 50%;
   height: 54px;
   left: 25%;
   top: 174px;
@@ -266,14 +262,14 @@ body {
 }
 .projects {
   position: absolute;
-
-  width: 1300px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: 85%;
   height: 404px;
   left: 150px;
   top: 262px;
 }
 .project-object {
-  display: inline-block;
   list-style-type: none;
   width: 370px;
   margin: 15px;
@@ -305,4 +301,10 @@ body {
   letter-spacing: 0.03em;
 
   color: #757575;
+}
+.container {
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
