--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,15 @@ body {
   height: 2349px;
   background: #ffffff;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
+}
 .menu {
   position: absolute;
   width: 1600px;
@@ -262,6 +271,7 @@ body {
 }
 .projects {
   position: absolute;
+  list-style-type: none;
   display: grid;
   grid-template-columns: auto auto auto;
   width: 85%;
@@ -270,7 +280,6 @@ body {
   top: 262px;
 }
 .project-object {
-  list-style-type: none;
   width: 370px;
   margin: 15px;
   height: 404px;
@@ -303,6 +312,7 @@ body {
   color: #757575;
 }
 .container {
+  border: 1px solid;
 }
 .section {
   padding-top: 94px;
