--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,14 @@ h6 {
   padding: 0;
   margin: 0;
 }
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+}
+p {
+  padding: 0;
+}
 .menu {
   position: absolute;
   width: 1600px;
@@ -21,7 +29,7 @@ h6 {
 }
 .menu-nav {
   position: absolute;
-  width: 1600px;
+  width: 1580px;
   height: 80px;
 }
 .menu-list {
@@ -31,6 +39,7 @@ h6 {
   justify-content: space-between;
 }
 .list {
+  padding-top: 25px;
 }
 .logo {
   cursor: pointer;
@@ -73,7 +82,7 @@ h6 {
 .header-tel {
   cursor: pointer;
   text-decoration: none;
-  padding-left: 750px;
+  padding-left: 700px;
 }
 .header-mail {
   cursor: pointer;
@@ -312,7 +321,8 @@ h6 {
   color: #757575;
 }
 .container {
-  border: 1px solid;
+  width: 1200px;
+  padding: 0 15px;
 }
 .section {
   padding-top: 94px;
