--- a/css/styles.css
+++ b/css/styles.css
@@ -29,14 +29,15 @@ p {
 }
 .menu-nav {
   position: absolute;
-  width: 1580px;
+  width: 1400px;
   height: 80px;
+  left: 150px;
 }
 .menu-list {
   display: flex;
   list-style-type: none;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 .list {
   padding-top: 25px;
@@ -77,17 +78,17 @@ p {
 .header-menu {
   cursor: pointer;
   text-decoration: none;
-  padding-left: 20px;
+  padding-left: 50px;
 }
 .header-tel {
   cursor: pointer;
   text-decoration: none;
-  padding-left: 700px;
+  padding-left: 400px;
 }
 .header-mail {
   cursor: pointer;
   text-decoration: none;
-  padding-left: 50px;
+  padding-left: 25px;
 }
 .main {
   position: absolute;
