--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
 body {
+  display: flex;
   position: relative;
-  width: 1600px;
+  width: 100%;
   height: 2349px;
   background: #ffffff;
+  justify-content: center;
 }
 h1,
 h2,
@@ -373,7 +375,7 @@ p {
   color: #757575;
 }
 .container {
-  width: 1200px;
+  width: 1600px;
   padding: 0 15px;
 }
 .section {
