--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  display: flex;
   position: relative;
   width: 100%;
   height: 2349px;
@@ -131,7 +132,7 @@ p {
   position: absolute;
   width: 1600px;
   height: 2000px;
-  padding-top: 80px;
+  top: 80px;
 }
 .main-order-title {
   position: absolute;
