--- a/css/styles.css
+++ b/css/styles.css
@@ -209,13 +209,17 @@ h3 {
 }
 .jobs {
   position: absolute;
-  width: 1170px;
+  width: 1600px;
   height: 386px;
-  left: 215px;
-  top: 1075px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
 }
 .jobs-list {
   display: inline;
+  padding-right: 25px;
+  padding-left: 25px;
   list-style-type: none;
 }
 .jobs-image {
@@ -224,11 +228,8 @@ h3 {
 }
 .jobs-title {
   position: absolute;
-  width: 352px;
-  height: 42px;
-  left: 624px;
-  top: 969px;
-
+  width: 1600px;
+  height: 100px;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -406,8 +407,7 @@ h3 {
   background-color: #2f303a;
 }
 .stats-section {
-  height: 980px;
-  padding-top: 680px;
+  height: 400px;
 }
 .jobs-section {
   height: 500px;
