--- a/css/styles.css
+++ b/css/styles.css
@@ -241,27 +241,42 @@ h3 {
 }
 .team {
   position: absolute;
-  width: 1270px;
-  height: 368px;
-  left: 150px;
-  top: 1635px;
+  display: flex;
+  width: 1600px;
+  height: 500px;
+  padding-top: 150px;
+  align-items: center;
+  justify-content: center;
+}
+.team-section {
+  width: 1600px;
+  height: 700px;
+  background-color: #f5f4fa;
 }
 .team-list {
   width: 300px;
+  height: 400px;
   text-align: center;
   display: inline-block;
   list-style-type: none;
+  background: #ffffff;
+  margin-left: 25px;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-image {
   width: 270px;
   height: 260px;
+  margin-top: 25px;
 }
 .team-title {
   position: absolute;
-  width: 210px;
-  height: 42px;
-  left: 695px;
-  top: 1543px;
+  width: 1600px;
+  height: 100px;
+  padding-top: 50px;
+  justify-content: center;
 
   font-family: Roboto;
   font-style: normal;
