--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   position: relative;
   width: 100%;
-  height: 2349px;
+  height: 2250px;
   background: #ffffff;
   justify-content: center;
 }
@@ -176,7 +176,7 @@ p {
 .stats {
   position: absolute;
   width: 1600px;
-  height: 150px;
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -184,7 +184,7 @@ p {
 .stats-list {
   display: inline-block;
   width: 320px;
-  height: 100px;
+  height: 300px;
   list-style-type: none;
   padding: 25px;
 }
@@ -298,8 +298,8 @@ h3 {
   position: absolute;
   width: 1600px;
   height: 180px;
-  top: 2197px;
   background-color: #2f303a;
+  bottom: 0px;
 }
 .footer-portfolio {
   position: absolute;
@@ -423,7 +423,7 @@ h3 {
   background-color: #2f303a;
 }
 .stats-section {
-  height: 400px;
+  height: 200px;
 }
 .jobs-section {
   height: 500px;
