--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ p {
   width: 320px;
   height: 300px;
   list-style-type: none;
-  padding: 25px;
+  padding-top: 2em;
 }
 .stats-description {
   font-family: Roboto;
@@ -268,6 +268,14 @@ h3 {
   width: 300px;
   font-weight: normal;
   color: #757575;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 .footer {
   width: 100%;
